// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the onRetry mutation The job can be restarted if it fails or it is cancelled 1`] = `
Object {
  "retryJob": Object {
    "id": 6,
    "name": "Bla c",
    "status": "queued",
    "type": "c",
  },
}
`;

exports[`Test the onRetry mutation The job can be restarted if it fails or it is cancelled 2`] = `
Object {
  "retryJob": Object {
    "id": 7,
    "name": "Bla e",
    "status": "queued",
    "type": "e",
  },
}
`;
